--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="image(1).jpg" target="_blank" class="download-button">Download CV</a>
+            <a href="Aravinth.jpg" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
