--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="content://com.android.providers.media.documents/document/image%3A651954" alt="Your Profile Picture" class="pclass=""rofile-picture">
+            <img src=" image (1).jpg" alt="Your Profile Picture" class="pclass=""rofile-picture">
             <h1>ARAVINTH V</h1>
             <p>Web-developer</p>
         </div>
@@ -155,7 +155,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Aravinth.jpg" target="_blank" class="download-button">Download CV</a>
+            <a href="Aaravinthvresum.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
