--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="section-content">
             <center>
             <h2>COURSE COMPLETE CERTIFICATE TNSDC-FEWD</h2>
-            <a href="" target="_blank" class="download-button">Download CV</a>
+            <a href="Aravinth V TNSDC certificate .pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
