--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Aaravinthvresume.pdf" target="_blank" class="download-button">Download Certificate</a>
+            <a href="Aaravinthvresume.pdf" target="_blank" class="download-button">Download cv </a>
         </center>
         </div>
         
@@ -165,7 +165,7 @@
         <div class="section-content">
             <center>
             <h2>COURSE COMPLETE CERTIFICATE TNSDC-FEWD</h2>
-            <a href="Aravinth V TNSDC certificate .pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="Aravinth V TNSDC certificate .pdf" target="_blank" class="download-button">Download Certificate  </a>
         </center>
         </div>
         
